bcl-basis completed

--- a/im-proc/bcl-basis/Makefile
+++ b/im-proc/bcl-basis/Makefile
@@ -7,14 +7,21 @@ LDLIBS   = -lbcl
 
 BIN=\
 	test-bcl\
-	extract-subimage
+	extract-subimage\
+	extract-channel\
+	gray2color\
+	color2mean\
+	normalize\
+
+
 
 .PHONY: all
 all:$(BIN)
 
 .PHONY: clean cleanall
 clean:
-	$(RM) *.o *~ *.ppm
+	# $(RM) *.o *~ *.ppm
+	$(RM) *.o *~ 
 cleanall: clean
 	$(RM) $(BIN) 
 
