use pnm_get_component && normalize k

--- a/im-proc/zoom/Makefile
+++ b/im-proc/zoom/Makefile
@@ -5,11 +5,12 @@ CFLAGS   = -Wall -Wextra -Werror -pedantic -std=c99
 LDFLAGS  = -L$(ROOT)/lib 
 LDLIBS   = -lbcl -lm -lfftw3
 
-BIN=copy padding filter
+BIN= copy padding filter
 
 .PHONY: all
 all: $(BIN)
 
+copy: copy.o 
 padding: fft.o
 
 .PHONY: clean cleanall
