normalize RGB color & use rows and cols from both images

--- a/im-proc/color-transfer/Makefile
+++ b/im-proc/color-transfer/Makefile
@@ -5,7 +5,7 @@ CFLAGS   = -Wall -Wextra -Werror -pedantic -std=c99
 LDFLAGS  = -L$(ROOT)/lib 
 LDLIBS   = -lbcl -lm -lfftw3
 
-BIN= color-transfer
+BIN= color-transfer run
 
 .PHONY: all
 all: $(BIN)
